--- a/_sass/_paralax.scss
+++ b/_sass/_paralax.scss
@@ -52,7 +52,10 @@ main {
   height: calc(100vh - 5em);
   min-height: 600px;
 }
-#slide-1 .bcg {background-image:url('/assets/img/oakalley-hd.jpg')}
+#slide-1 .bcg {
+    background-image:url('/assets/img/oakalley-hd.jpg');
+    z-index: -2;
+  }
 #slide-1 .hsContent {
 	bottom: 150px;
 	top: auto;
